--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-multi-carousel": "^2.8.4",
     "react-player": "^2.14.0",
     "react-responsive": "^9.0.2",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
