--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "dompurify": "^3.0.6",
+    "file-saver": "^2.0.5",
     "formik": "^2.4.5",
     "moment": "^2.29.4",
     "react": "^18.2.0",
