--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "formik": "^2.4.5",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-avatar": "^5.0.3",
     "react-bootstrap": "^2.9.1",
     "react-comments-section": "^2.0.10",
     "react-dom": "^18.2.0",
@@ -28,6 +29,7 @@
     "react-image-zoom": "^1.3.1",
     "react-material-ui-carousel": "^3.4.2",
     "react-multi-carousel": "^2.8.4",
+    "react-multi-email": "^1.0.19",
     "react-player": "^2.14.0",
     "react-responsive": "^9.0.2",
     "react-responsive-carousel": "^3.2.23",
